--- a/package.json
+++ b/package.json
@@ -23,8 +23,18 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "re-resizable": "^6.10.3",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-draggable": "^4.4.6",
+    "react-grid-layout": "^1.5.0",
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
