Added Module resolution. For some users not having this was causing an error

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -9,6 +9,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "es2020",
+    "moduleResolution": "node",
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
